@@ -1,3 +1,9 @@
+2005-02-08  Andrew Cagney  <cagney@gnu.org>
+
+	* value.c (struct value): Move to here ...
+	* value.h (struct value): ... from here.  Copy comments to
+	corresponding function declarations, re-order.
+
 2005-02-07  Andrew Cagney  <cagney@gnu.org>
 
 	* value.c (set_value_bitpos, set_value_bitsize): Define.
